# kirami-plugin-fishing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
kirami-plugin-fishing/: __init__.py  data_source.py  image_handle.py
resources/: fishes.json
